# C-WSHTTP

./: README.md  rendu.md
my_http_server/: .gitignore  CMakeLists.txt
my_http_server/config/: server_config.json
my_http_server/src/: handler.cpp  handler.hpp  main.cpp  server.cpp  server.hpp  utils.cpp  utils.hpp
my_http_server/static/: index.html  test.json
